# graspgen_ros

./: .gitignore  LICENSE  README.md  docker-compose.yml
docker/graspgen/: Dockerfile
ros2_ws/graspgen_tutorials/: package.xml  setup.cfg  setup.py
ros2_ws/graspgen_tutorials/config/: example_mesh_antipodal_generator.yaml  example_mesh_suction_generator.yaml  example_planner.yaml  example_pointcloud_antipodal_generator.yaml  example_pointcloud_collisionfree_antipodal_generator.yaml  example_pointcloud_suction_generator.yaml  grasps.rviz
ros2_ws/graspgen_tutorials/graspgen_tutorials/: grasp_planning_service.py  mesh_graspgen_service.py  pointcloud_collisionfree_graspgen_service.py  pointcloud_graspgen_service.py
ros2_ws/graspgen_tutorials/launch/: mesh_graspgen_launch.py  plan_grasp_launch.py  pointcloud_collisionfree_graspgen_launch.py  pointcloud_graspgen_launch.py
ros2_ws/graspgen_tutorials/script/: obj2stl.py  stl2pcjson.py
share/grasp_result/: example.yaml  example_mesh_antipodal.yaml  example_mesh_suction.yaml  example_pointcloud_antipodal.yaml  example_pointcloud_collisionfree_antipodal.yaml  example_pointcloud_suction.yaml
share/obj_mesh/: example.stl
share/pcjson/: example.json  table.json
share/tool_mesh/: suction_cup.stl
utils/: demo.sh  mesh_antipodal_demo.sh  mesh_suction_demo.sh  pointcloud_antipodal_demo.sh  pointcloud_collisionfree_antipodal_demo.sh  pointcloud_suction_demo.sh
